# capstone-BlueAlphaProject2

./: .dockerignore  .gitignore  Dockerfile  README.md  example.yaml  pyproject.toml  requirements-meridian.txt  requirements.txt  test.py
.streamlit/: config.toml
app/: README.md  __init__.py  cache.py  debug_ndlog.py  default_channel.py  meridian_mmm.py  mmm_roi_forest.py  paths.py  pipeline_runner.py  streamlit_app.py  theme.py  ui_budget_shifts.py  ui_channel_form.py  ui_channel_toggles.py  ui_chart_constants.py  ui_config_merge.py  ui_correlations.py  ui_curve_preview.py  ui_form_state.py  ui_help_markdown.py  ui_helpers.py  ui_meridian_tab.py  ui_prerun.py  ui_results.py  ui_schema.yaml  ui_seasonality_panel.py  ui_seed_extras.py  ui_yaml_io.py
data/: monthly_mocha.csv
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
notebooks/: MMM_model.ipynb  mocha_MMM_generator.ipynb
output/: Example Alpha_20260303_1036.csv
scripts/: Default.yaml  baseline_distributions.ipynb  config.py  generator.py  ground_truth_io.py  main.py  random_noise.py  run_dev.sh  run_streamlit.sh  spend_distribution.py
server/: __init__.py  correlations.py  main.py  mmm.py  serializers.py  store.py  validate.py
tests/: conftest.py  test_channel_toggles.py  test_config.py  test_correlation_analysis.py  test_determinism_and_cache.py  test_impressions_simulation.py  test_pipeline.py  test_revenue_simulation.py  test_seasonality_fit.py  test_spend_generation.py  test_ui_channel_toggles.py  (+1 more)
(+96 files in other folders)
