[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone-bluealpha-project2"
version = "0.1.0"
description = "Marketing simulation pipeline and Streamlit UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib>=3.8.0",
    "PyYAML",
    "pytest",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
mmm = [
    "google-meridian>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "app*"]
